# cdisc-mcp

./: .gitignore  CLAUDE.md  README.md  install.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci-lint.yml  ci-quality-gate.yml  ci-tests.yml  ci-types.yml
docs/: CONTRIBUTING.md  README.ja.md  README.zh.md  examples.md  user-manual.md
docs/plans/: 2026-02-26-cdisc-mcp-server.md
src/cdisc_mcp/: __init__.py  client.py  config.py  errors.py  response_formatter.py  server.py
src/cdisc_mcp/tools/: _helpers.py  _validators.py  adam.py  cdash.py  sdtm.py  search.py  terminology.py
tests/: conftest.py  test_client.py  test_config.py  test_errors.py  test_response_formatter.py  test_server.py  test_tools.py
tests/integration/: test_client_integration.py
tests/unit/: test_client.py  test_config.py  test_response_formatter.py  test_tools_sdtm.py  test_tools_terminology.py  test_tools_validators.py
web/: app.py  index.html
