[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cdisc-mcp"
version = "0.1.0"
description = "MCP server exposing CDISC Library metadata as AI-callable tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "cachetools>=5.3",
    "tenacity>=8.3",
]

[project.scripts]
cdisc-mcp = "cdisc_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-cachetools",
]
web = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=src/cdisc_mcp",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["src/cdisc_mcp"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "E501", "B017"]

[tool.mypy]
python_version = "3.11"
strict = true
